syntax = "proto3";
package badgeforce_pb;

message Credential {
    string name = 1;
    string issuer_public_key = 2;
    string recipient_public_key = 3;
    bool revokation_status = 4;
    string proof_of_integrity_hash = 5;
    string storage_hash = 6;
    Template template = 7;
    int64 expiration = 8;
    int64 issued_at = 9;
    string signature = 10;
}

message Template {
    string owner = 1;
    string name = 2;
    string version = 3;
}